--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 
 #calculator-content {
     width: 400px;
+    text-align: center;
 }
 
 #buttons {
@@ -19,13 +20,18 @@ body {
 
 #display {
     height: 50px;
+    text-align: right;
 }
 
 #clear-button {
     height: 50px;
+    text-align: center;
 }
 
 .button {
     height: 85px;
     width: 85px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 85px;
 }
