--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
 #calculator-content {
     width: 400px;
     text-align: center;
+    background-color: #212438;
+    border-radius: 10px;
+    color: #d0d5d9;
 }
 
 #buttons {
@@ -21,6 +24,7 @@ body {
 #display {
     height: 50px;
     text-align: right;
+    background-color: #587a6c;
 }
 
 #clear-button {
@@ -34,4 +38,16 @@ body {
     text-align: center;
     vertical-align: middle;
     line-height: 85px;
+}
+
+.operation {
+    background-color: #525f88;
+}
+
+.number {
+    background-color: #d0d5d9;
+}
+
+.equals {
+    background-color: #3586c3;
 }
